rns-lang/tests/snapshots/lexer-integers-overflow_positive.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.limit 99999999999999999999

----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/integers/overflow_positive.ja:1:8 ]
   │
 1 │ .limit 99999999999999999999
   │        ──────────┬─────────  
   │                  ╰─────────── '99999999999999999999' is not a valid integer
   │ 
   │ Note: Expected a valid integer number.
───╯
